force-app/main/default/objects/Account/fields/AccountSync_Bypass__c.field-meta.xml
<CustomField>
    <fullName>AccountSync_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Field. Indicates whether the account should be excluded from synchronization to prevent infinite sync loops.</description>
    <label>AccountSync Bypass</label>
    <type>Checkbox</type>
</CustomField>