force-app/main/default/objects/Account/fields/AccountSync_Id__c.field-meta.xml
<CustomField>
    <fullName>AccountSync_Id__c</fullName>
    <description>An external ID used for synchronizing Account records between the APAL and VMAP organizations. Automatically generated in the AccountSyncService Apex class.</description>
    <externalId>true</externalId>
    <label>AccountSync Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>