force-app/main/default/objects/Account/fields/CoCM__c.field-meta.xml
<CustomField>
    <fullName>CoCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoCM</label>
    <type>Checkbox</type>
</CustomField>