force-app/main/default/objects/Account/fields/ConferencePresentation__c.field-meta.xml
<CustomField>
    <fullName>ConferencePresentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presentation or Exhibit</label>
    <type>Checkbox</type>
</CustomField>