force-app/main/default/objects/Account/fields/DirectContactWithVMAPstaff__c.field-meta.xml
<CustomField>
    <fullName>DirectContactWithVMAPstaff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APAL or HealthHaven Staff</label>
    <type>Checkbox</type>
</CustomField>