force-app/main/default/objects/Account/fields/Disable_AccountSync__c.field-meta.xml
<CustomField>
    <fullName>Disable_AccountSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, this Account will be excluded from the data synchronization process between VMAP and APAL. Used to prevent specific records from being automatically transmitted.</description>
    <label>Disable AccountSync</label>
    <type>Checkbox</type>
</CustomField>