force-app/main/default/objects/Account/fields/heard_other__c.field-meta.xml
<CustomField>
    <fullName>heard_other__c</fullName>
    <label>How did you hear about APAL? - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>