force-app/main/default/objects/Account/fields/I_Do_Not_See_Patients__c.field-meta.xml
<CustomField>
    <fullName>I_Do_Not_See_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Do Not See Patients</label>
    <type>Checkbox</type>
</CustomField>