force-app/main/default/objects/Account/fields/Name_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Practice__c</fullName>
    <inlineHelpText>Please use Practice field above to connect a Practice record</inlineHelpText>
    <label>Name of Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>