force-app/main/default/objects/Account/fields/On_Demand_AccountSync__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_AccountSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to control sync behavior when On-Demand mode is enabled in settings.</description>
    <label>On-Demand AccountSync</label>
    <type>Checkbox</type>
</CustomField>