force-app/main/default/objects/Account/fields/pcplangdesc__c.field-meta.xml
<CustomField>
    <fullName>pcplangdesc__c</fullName>
    <label>Other Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>