force-app/main/default/objects/Account/fields/pcpmdtypedesc__c.field-meta.xml
<CustomField>
    <fullName>pcpmdtypedesc__c</fullName>
    <label>Other Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>