force-app/main/default/objects/Account/fields/pcpmhtraindesc__c.field-meta.xml
<CustomField>
    <fullName>pcpmhtraindesc__c</fullName>
    <label>Describe Previous Mental Health Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>