force-app/main/default/objects/Account/fields/pcppatientage1318__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage1318__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Ages 13-18</label>
    <type>Checkbox</type>
</CustomField>