force-app/main/default/objects/Account/fields/pcppatientage23more__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage23more__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Ages 23+</label>
    <type>Checkbox</type>
</CustomField>