force-app/main/default/objects/Account/fields/pcppatientage612__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage612__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Ages 6-12</label>
    <type>Checkbox</type>
</CustomField>