force-app/main/default/objects/Account/fields/pcppatientage65plus__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage65plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Population (65+)</label>
    <type>Checkbox</type>
</CustomField>