force-app/main/default/objects/Account/fields/pcppatientage__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage__c</fullName>
    <label>Ages of Patients Seen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-5</fullName>
            </value>
            <value>
                <fullName>6-12</fullName>
            </value>
            <value>
                <fullName>13-18</fullName>
            </value>
            <value>
                <fullName>19-22</fullName>
            </value>
            <value>
                <fullName>23+</fullName>
            </value>
            <value>
                <fullName>Senior Population (65+)</fullName>
            </value>
            <value>
                <fullName>I don’t see patients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>