force-app/main/default/objects/Account/fields/pcpracedesc__c.field-meta.xml
<CustomField>
    <fullName>pcpracedesc__c</fullName>
    <label>Provider Race Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>