force-app/main/default/objects/Account/fields/pcptitle__c.field-meta.xml
<CustomField>
    <fullName>pcptitle__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physician (MD, DO)</fullName>
            </value>
            <value>
                <fullName>Nurse practitioner (NP)</fullName>
            </value>
            <value>
                <fullName>Physician&apos;s Assistant (PA)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>