force-app/main/default/objects/Account/fields/pcptraintype__c.field-meta.xml
<CustomField>
    <fullName>pcptraintype__c</fullName>
    <label>Trainee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student in a medical field (e.g., medical student, PA student)</fullName>
            </value>
            <value>
                <fullName>Resident (or equivalent within other medical fields)</fullName>
            </value>
            <value>
                <fullName>Fellow (or equivalent within other medical fields)</fullName>
            </value>
            <value>
                <fullName>Other medical trainee</fullName>
            </value>
            <value>
                <fullName>Student in a medical</fullName>
                <isActive>false</isActive>
                <label>Student in a medical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>