force-app/main/default/objects/Account/fields/PracticeLocality__c.field-meta.xml
<CustomField>
    <fullName>PracticeLocality__c</fullName>
    <inlineHelpText>Please include city and state (abbreviated)</inlineHelpText>
    <label>Practice Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>