force-app/main/default/objects/Account/fields/Provider_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Provider_Case_Count__c</fullName>
    <description>Used in a declarative rollup summary to count the number of cases a provider has</description>
    <label>Provider Case Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>