force-app/main/default/objects/Account/fields/VMAPEnrolledProvider__c.field-meta.xml
<CustomField>
    <fullName>VMAPEnrolledProvider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APAL or HealthHaven Enrolled Provider</label>
    <type>Checkbox</type>
</CustomField>