force-app/main/default/objects/Account/validationRules/Date_When_Training_Will_End_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_When_Training_Will_End_required</fullName>
    <active>true</active>
    <description>When the Provider Trainee Type is ‘Student’, the user must specify the Date When Training Will End (trainenddate__c).</description>
    <errorConditionFormula>AND(
OR(Bypass_Validations_Timeout__c &lt;= NOW(), ISBLANK(Bypass_Validations_Timeout__c)),
ISPICKVAL(pcptraintype__c, &apos;Student in a medical field (e.g., medical student, PA student)&apos;),
ISBLANK(trainenddate__c),
RecordType.DeveloperName = &apos;Provider&apos;
)</errorConditionFormula>
    <errorDisplayField>trainenddate__c</errorDisplayField>
    <errorMessage>Please specify the Date When Training Will End if ‘Trainee Type’ is ‘Student’.</errorMessage>
</ValidationRule>