force-app/main/default/objects/Account/validationRules/Other_Medical_Trainee_Description_requir.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Medical_Trainee_Description_requir</fullName>
    <active>true</active>
    <description>When the Provider Trainee Type is ‘Other ’, the user must provide the Other Medical Trainee Description (pcptraintypedescrmd__c).
Subject to bypass validation</description>
    <errorConditionFormula>AND(
OR(Bypass_Validations_Timeout__c &lt;= NOW(), ISBLANK(Bypass_Validations_Timeout__c)),
ISPICKVAL(pcptraintype__c, &apos;Other medical trainee&apos;),
ISBLANK(pcptraintypedescrmd__c),
RecordType.DeveloperName = &apos;Provider&apos;
)</errorConditionFormula>
    <errorDisplayField>pcptraintypedescrmd__c</errorDisplayField>
    <errorMessage>Please input the Other Medical Trainee Description when ‘Trainee Type’ is ‘Other medical trainee’.</errorMessage>
</ValidationRule>