force-app/main/default/objects/Account/validationRules/Require_Practice_Locality.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Practice_Locality</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Practice_Locality__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Practice_Locality__c</errorDisplayField>
    <errorMessage>Practice Locality is required</errorMessage>
</ValidationRule>