force-app/main/default/objects/Account/validationRules/Speciality_Description_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Speciality_Description_required</fullName>
    <active>true</active>
    <description>If pcpmdtype_c = ‘Other’, then pcpmdtypedesc_c must be provided.
This validation fires only if the current time is greater than or equal to Bypass_Validations_Timeout__c.</description>
    <errorConditionFormula>AND(
OR(Bypass_Validations_Timeout__c &lt;= NOW(),
isBlank(Bypass_Validations_Timeout__c)
),
ISPICKVAL(pcpmdtype__c, &apos;Other&apos;),
ISBLANK(pcpmdtypedesc__c),
RecordType.DeveloperName = &apos;Provider&apos;
)</errorConditionFormula>
    <errorMessage>Specialty Description is required if Specialty is ‘Other’.</errorMessage>
</ValidationRule>