force-app/main/default/objects/Account/listViews/Providers.listView-meta.xml
<ListView>
    <fullName>Providers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>pcpmdtype__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>pcpphonedesc__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>pcpnpi__c</columns>
    <columns>famaddroth_v2__pc</columns>
    <columns>Practice_VMAP_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Providers</label>
</ListView>